--- a/apps/every-stack/src/app/app.component.html
+++ b/apps/every-stack/src/app/app.component.html
@@ -1,3 +1,1 @@
-<lib-card>
-  <h1>I'm a card</h1> </lib-card
-><router-outlet></router-outlet>
+<lib-card> <h1>I'm a card</h1> </lib-card><router-outlet></router-outlet>
