--- a/apps/every-stack/src/app/app.component.html
+++ b/apps/every-stack/src/app/app.component.html
@@ -1,1 +1,2 @@
-<lib-card> <h1>I'm a card</h1> </lib-card><router-outlet></router-outlet>
+<h1>Welcome every-stack</h1>
+<lib-card> <h2>I'm a card</h2> </lib-card><router-outlet></router-outlet>
